[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-tools"
version = "0.1.0"
description = "Tool call validation and schema enforcement for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "agents", "tools", "validation", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # zero dependencies

[project.urls]
Homepage = "https://github.com/example/agent-tools"
"Bug Tracker" = "https://github.com/example/agent-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
